src/snapshots/green_tea__renderer__test__render_for_from_expression.snap
---
source: src/renderer.rs
expression: "Hello {% for item as Item in list.take(list, 2) %}{{ item }}{% endfor %}"
---
// DO NOT EDIT: Code generated by green-tea from -test-

import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder() -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello ")
    let builder = list.fold(list.take(list, 2), builder, fn(builder, item: Item) {
            let builder = string_builder.append(builder, item)

        builder
})

    builder
}

pub fn render() -> String {
    string_builder.to_string(render_builder())
}

